<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Latest News</string>
    <string name="title_activity_tabbed">Latest News</string>
    <string name="tab_text_3">Home</string>
    <string name="tab_text_2">News</string>
    <string name="tab_text_1">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_news_page">Exchange Rates</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Hello blank fragment</string>
    <string name="title_activity_add_news2">Hello blank fragment</string>
    <string name="add_news_item">Add News Item</string>
    <string name="add_image">Add image</string>
    <string name="news_time">News Time</string>
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
</resources>