<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewsPageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_news_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="right"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/add_news_item"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/add_news_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_add"
                android:gravity="left" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".AddNewsActivity">



        <Button
            android:id="@+id/add_news_image"
            android:layout_width="230dp"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/add_image"
            android:gravity="center|bottom"
            android:text="@string/add_image" />

        <EditText
            android:id="@+id/add_news_time"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/news_edittext_shape"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/news_time"
            android:inputType="none"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/add_news_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="text"
            android:layout_weight="1"
            android:background="@drawable/news_edittext_shape"
            android:hint="@string/news_title"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_news_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="10"
            android:background="@drawable/news_edittext_shape"
            android:ems="10"
            android:gravity="top|right"
            android:hint="@string/news_description"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


    </LinearLayout>

</LinearLayout>